# mcp-py-repl

./: Dockerfile  README.md  docker-push.sh  pyproject.toml
src/mcp_py_repl/: __main__.py  instrumentation.py  server.py
src/mcp_python/: __init__.py  server.py
