[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp-python"
version = "0.1.4"
description = "MCP server providing a Python REPL with persistent session"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.2.1",
]
authors = [{ name = "Tynan Daly", email = "tynan@hdr.is" }, {name="evalstate"}]
license = "MIT"
keywords = ["mcp", "repl", "python", "server"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
readme = "README.md"

[project.urls]
Homepage = "https://llmindset.co.uk"
Repository = "https://github.com/evalstate/mcp-python.git"
Issues = "https://github.com/evalstate/mcp-python/issues"
Github = "https://github.com/evalstate/mcp-python"

[project.scripts]
mcp-python = "mcp_python:main"

# Add this section to tell Hatch where to find the package files
[tool.hatch.build.targets.wheel]
packages = ["src/mcp_python"]
